--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "async-validator": "^3.2.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.12.2",
     "eslint-plugin-vue": "^5.0.0",
